tests/mm0_mmu/fail/bad-sort2.mm0
-- pure modifier not first 
provable pure sort s5;